...
import { scaledWidth, scaledHeight, normaliseFont } from 'src/util/dimensions';
import misc from 'src/util/misc';
import HistoryDataModel, { TransactionDataModel, OrderDataModel } from './HistoryDataModel';

// Logger
import logger from 'src/util/logger';
let logger2 = logger.extend('History');
let {deb, dj, log, lj} = logger.getShortcuts(logger2);


let Touchable = Platform.select({
  ios: TouchableOpacity,
  android: TouchableNativeFeedback,
...


  // Dropdown state: Category
  let [open, setOpen] = useState(false);
  let [category, setCategory] = useState(selectedCategory);
  let [categoryItems, setCategoryItems] = useState([
    {label: 'Orders', value: 'orders'},
    {label: 'All Transactions', value: 'transactions'},
  ]);


  // Initial setup.
  useEffect(() => {
...
          </View>
        ))}
        
        {/* Loading indicator when fetching more */}
        {isLoadingMore && (
          <View style={{ marginTop: 16, marginBottom: 16, alignItems: 'center' }}>
            <Text style={{ color: '#999', fontSize: 14 }}>Loading more...</Text>
          </View>
        )}
        
        {/* End of list indicator */}
        {!hasMoreTransactions && data.length > 0 && (
          <View style={{ marginTop: 16, marginBottom: 16, alignItems: 'center' }}>
...
